added views and controller and routes for pet registration

--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "mongoose": "^5.12.8",
     "nodemailer": "^6.6.1",
     "sendgrid": "^5.2.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
