--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.11.1",
+    "lodash": "^4.17.21",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.8",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.1",
     "sendgrid": "^5.2.3"
   },
