--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express-validator": "^6.11.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.8",
+    "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.7",
     "nodemailer": "^6.6.1",
     "sendgrid": "^5.2.3"
   }
