--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "dotenv": "^4.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.11.1",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.8",
+    "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
